--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "asofter/yii2-imperavi-redactor",
+    "name": "volkovalexander/yii2-imperavi-redactor",
     "description": "Imperavi Redactor WYSIWYG widget (OEM-licensed for Yii 2)",
     "keywords": ["yii", "imperavi redactor", "imperavi"],
     "type": "yii2-extension",
@@ -24,6 +24,17 @@
         {
             "name": "Alexander Yaremchuk",
             "email": "alwex10@gmail.com"
+        },
+        {
+            "name": "Alexander Volkov",
+            "email": "volkkb@gmail.com"
+        }
+    ],
+    "repositories":
+    [
+        {
+            "type": "vcs",
+            "url": "https://github.com/VolkovAlexander/yii2-imperavi-redactor"
         }
     ],
     "require": {
